<resources>
    <string name="app_name">AssurantApp</string>
    <string name="splash">ASSURANT</string>
    //Onboarding
    <string name="next">Siguiente</string>
    <string name="skip">Salir</string>
    <string name="start">Comenzar</string>
    <string name="slide_1_title">PRIMERA PANTALLA</string>
    <string name="slide_2_title">SEGUNDA PANTALLA</string>
    <string name="slide_3_title">TERCERA PANTALLA</string>
    <string name="slide_1_text">Assurant te permite asegurar tus equipos en 3 simples pasos, y activar la cobertura cuando más lo necesitás</string>
    <string name="slide_3_text">Si activás la cobertura, tu equipo estará protegido. No se te cobra cuando no está activada la cobertura</string>
    <string name="slide_3_text_2">Protegemos las cosas. Servimos a la gente</string>
    <string name="slide_2_text">Con los datos de tu equipo, te decimos lo que tenés que pagar, y vos decidís qué asegurar, cuándo y por cuánto tiempo</string>
    <string name="slide_1">primero</string>
    <string name="slide_2">segundo</string>
    <string name="slide_3">tercero</string>
    <string name="opening">opening</string>

    //NavigationView
    <string name="company_name">Assurant</string>
    <string name="aboutUs">About Us</string>
    <string name="my_insurance">Mis Seguros</string>
    <string name="login">Iniciar Sesión</string>
    <string name="logout">Salir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //Fragment Add
    <string name="title_fragment_add">Agregar dispositivo</string>
    <string name="title_final_verif">Verificación Final</string>
    <string name="spinner_title">Tipo de dispositivo</string>
    <string name="photos_fragment_add">Fotos de mi dispositivo</string>
    <string name="name_fragment_add">Nombre de mi dispositivo</string>
    <string name="request_invoice">Confirmo que poseo la factura de compra</string>
    <string name="request_photos">El equipo funciona perfectamente y no posee ningún daño</string>
    <string name="photo_invoice">Foto de mi factura de compra</string>
    <string name="sales_date_fragment_add">Fecha de compra</string>
    <string name="make_fragment_add">Marca</string>
    <string name="model_fragment_add">Modelo</string>
    <string name="sales_date_error">La fecha de compra no puede superar el año</string>
    <string name="error_not_invoice_checked">Recuerde que necesita la factura de compra para asegurar su equipo</string>
    <string name="error_not_device_choosen">Recuerde que debe seleccionar el tipo de dispositivo</string>
    <string name="error_not_sales_date">Recuerde que debe ingresar la fecha de compra del dispositivo</string>
    <string name="error_not_photo">Aún faltan fotos</string>
    <string name="error_not_enough_info">Debe completar todos los campos para continuar</string>
    <string name="device_price_title">El precio de tu seguro:</string>
    <string name="coverage_titel">Coberturas que tienes</string>

    //Database
    <string name="device_reference_child">myDevice</string>
    <string name="uif_reference_child">myInfo</string>

    //LogIn
    <string name="welcome_login">Bienvenidos a Assurant APP</string>
    <string name="choose_login">Elige como ingresar:</string>
    <string name="email_login">Ingrese su Email</string>
    <string name="pass_login">Ingrese su Contraseña</string>
    <string name="or">También puedes ingresar con:</string>
    //Facebook
    <string name="facebook_app_id">292033288323458</string>
    <string name="fb_login_protocol_scheme">fb292033288323458</string>
    //UIF DATA
    <string name="uif_title">Unos pasos más</string>
    <string name="uif_documento">Número de documento</string>
    <string name="uif_birth">Fecha de nacimiento</string>
    <string name="uif_cuit">CUIT</string>
    <string name="uif_nationality">Nacionalidad</string>
    <string name="uif_address">Dirección</string>
    <string name="uif_phone">Teléfono</string>
    <string name="uif_email">EMAIL</string>
    <string name="uif_activity">Actividad laboral</string>
    <string name="uif_maritial">Estado civil</string>
    <string name="uif_btn">Finalizar</string>

    //Detail
    <string name="text_download">Baja tu poliza de seguro:</string>
    <string name="link"><a href="https://ar.assurantcustomerportal.com/">Click aquí para bajar mi póliza</a></string>

    //DaysToInsure
    <string name="hours_insure">¿Cuantas horas quiere asegurar su equipo?</string>
    <string name="days_insure">¿Cuantos días quiere asegurar su equipo?</string>
    <string name="month_insure">¿Cuantos meses quiere asegurar su equipo?</string>
    <string name="contratar">contratar</string>
    <string name="cancelar">cancelar</string>

</resources>
