<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UifDataActivity"
    android:orientation="vertical"
    android:weightSum="100"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:text="@string/uif_title"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/colorAccentOrange"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="84"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerDocumentType"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"
                    android:backgroundTint="@color/colorAccentGreen"
                    style="@style/Widget.AppCompat.Spinner.Underlined"
                    android:layout_marginBottom="8dp"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/addTextInputDocument"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    >
                    <EditText
                        android:id="@+id/addDocument"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/uif_documento"
                        android:inputType="number"
                        />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/addBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uif_birth"
                    android:inputType="date"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputCuit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/addCuit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uif_cuit"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputNationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/addNationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uif_nationality"
                    android:inputType="textCapWords"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <EditText
                    android:id="@+id/addAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uif_address"
                    android:inputType="textPostalAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/addPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uif_phone"
                    android:inputType="phone"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/addEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uif_email"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/addActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uif_activity"
                    android:inputType="text"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputMaritial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                >
                <EditText
                    android:id="@+id/addMaritial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/uif_maritial"
                    android:inputType="text"
                    />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:id="@+id/btnContinue"
        android:text="@string/uif_btn"
        android:background="@color/colorAccentOrange"
        android:theme="@style/Widget.AppCompat.ActionButton"
        android:textSize="25sp"
        android:textColor="@color/colorWhite"
        />

</LinearLayout>