<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LogInActivity"
    android:layout_margin="8dp"
    >

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/welcome_login"
        />

    <ImageView
        android:id="@+id/ivImagen"
        android:layout_below="@id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/assurant_logo_rgb_2"
        />

    <LinearLayout
        android:layout_below="@id/ivImagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:gravity="start"
            android:text="@string/choose_login"
            android:layout_marginBottom="10dp"
            />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            >
            <EditText
                android:id="@+id/etEmailSigIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email_login"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="100"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            >
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputPassSignIn"
                android:layout_width="0dp"
                android:layout_weight="90"
                android:layout_height="wrap_content"

                >
                <EditText
                    android:id="@+id/etPassSigIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pass_login"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btnEmailSignIn"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:background="@color/transparencia"
                />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="60"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            />


        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_facebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogleSignIn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </LinearLayout>

</RelativeLayout>