<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/dialogTheme"
    tools:context=".view.fragments.MonthToInsureFragment"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/device_price_title"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/insurancePriceMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginEnd="10dp"
            android:textSize="18sp"
            android:maxLines="1"
            android:minLines="1"
            tools:text="$ 50.5 /mes"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/month_insure"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputMonths"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="35dp"
        >
        <EditText
            android:id="@+id/monthsToInsure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        >
        <Button
            android:id="@+id/btnCancelMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:layout_marginEnd="5dp"
            android:background="@color/colorGrey"
            android:text="@string/cancelar"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            />
        <Button
            android:id="@+id/btnMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@color/colorAccentGreen"
            android:text="@string/contratar"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            />
    </LinearLayout>

</LinearLayout>