<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparencia"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="45dp"
        >

        <LinearLayout
            android:layout_margin="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_fragment_add"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="@color/colorAccentOrange"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spinner_title"
                android:gravity="left"
                android:textSize="18sp"
                android:textColor="@color/colorAccentOrange"
                />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerSelectTypeDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"
                android:backgroundTint="@color/colorAccentGreen"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_marginBottom="8dp"
                />

            <Switch
                android:id="@+id/switchInvoice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/request_invoice"
                android:textColor="@color/colorAccentGreen"
                android:textSize="16sp"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp"
                />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputSalesDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:visibility="gone"
                >
                <EditText
                    android:id="@+id/addSalesDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sales_date_fragment_add"
                    android:inputType="date"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:visibility="gone"
                android:id="@+id/textViewInvoiceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photo_invoice"
                android:gravity="left"
                android:textSize="18sp"
                android:textColor="@color/colorAccentOrange"
                />

            <android.support.v7.widget.CardView
                android:visibility="gone"
                android:id="@+id/cardViewImageOne"
                android:layout_gravity="end"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="2dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardCornerRadius="15dp"
                android:elevation="6dp"
                >
                <ImageView
                    android:id="@+id/image_one"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/invoice"
                    android:scaleType="center"
                    />
            </android.support.v7.widget.CardView>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <EditText
                    android:id="@+id/addDeviceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_fragment_add"
                    android:inputType="textNoSuggestions|textCapWords"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputMake"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <EditText
                    android:id="@+id/addMake"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/make_fragment_add"
                    android:inputType="textNoSuggestions|textCapWords"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/addTextInputModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                >
                <EditText
                    android:id="@+id/addModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/model_fragment_add"
                    android:inputType="textNoSuggestions|textCapWords"
                    />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/imeiCel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="15dp"
                android:visibility="gone"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/photos_fragment_add"
                android:gravity="left"
                android:textSize="18sp"
                android:textColor="@color/colorAccentOrange"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="25dp"
                android:id="@+id/imagenAgregada"
                >
                <android.support.v7.widget.CardView
                    android:layout_weight="25"
                    android:layout_marginEnd="2dp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    >
                    <ImageView
                        android:id="@+id/image_two"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginBottom="25dp"
                        android:src="@drawable/photo1"
                        android:scaleType="centerCrop"
                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_weight="25"
                    android:layout_marginEnd="2dp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    >
                    <ImageView
                        android:id="@+id/image_three"
                        android:layout_height="100dp"
                        android:layout_width="match_parent"
                        android:src="@drawable/photo2"
                        android:scaleType="centerCrop"
                        />
                </android.support.v7.widget.CardView>
                <android.support.v7.widget.CardView
                    android:layout_weight="25"
                    android:layout_marginEnd="2dp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    app:cardCornerRadius="15dp"
                    >
                    <ImageView
                        android:id="@+id/image_four"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:src="@drawable/photo3"
                        android:scaleType="centerCrop"
                        />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fabAddDevice"
        android:text="Ingresar"
        android:layout_gravity="bottom"
        android:background="@color/colorAccentOrange"
        android:theme="@style/Widget.AppCompat.ActionButton"
        android:textSize="25sp"
        android:textColor="@color/colorWhite"
        />
</android.support.design.widget.CoordinatorLayout>